[gd_scene load_steps=2 format=3 uid="uid://settings_panel"]

[ext_resource type="Script" path="res://ui/SettingsPanel.gd" id="1_script"]

[node name="SettingsPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220
offset_top = -180
offset_right = 220
offset_bottom = 180
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "âš™ Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MicContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MicLabel" type="Label" parent="MarginContainer/VBoxContainer/MicContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Microphone:"

[node name="MicOption" type="OptionButton" parent="MarginContainer/VBoxContainer/MicContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputLevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Input Level:"

[node name="LevelMeterContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="LevelBackground" type="ColorRect" parent="MarginContainer/VBoxContainer/LevelMeterContainer"]
layout_mode = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/LevelMeterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 4

[node name="LevelBarContainer" type="Control" parent="MarginContainer/VBoxContainer/LevelMeterContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelBar" type="ColorRect" parent="MarginContainer/VBoxContainer/LevelMeterContainer/MarginContainer/LevelBarContainer"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 0.0
grow_vertical = 2
color = Color(0.2, 0.85, 0.35, 1)

[node name="LevelPeak" type="ColorRect" parent="MarginContainer/VBoxContainer/LevelMeterContainer/MarginContainer/LevelBarContainer"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 3.0
grow_vertical = 2
color = Color(1, 1, 1, 0.9)

[node name="DbLabel" type="Label" parent="MarginContainer/VBoxContainer/LevelMeterContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 11
text = "-âˆž dB"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MicInfo" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Speak to test your microphone input."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LogoutButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "ðŸšª Log Out"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"
